--- a/src/Properties/Resources.es-ES.resx
+++ b/src/Properties/Resources.es-ES.resx
@@ -189,7 +189,7 @@
   <data name="lrbtbMaestros" xml:space="preserve">
     <value>Maestros</value>
   </data>
-  <data name="lrrCentrosAlquiler" xml:space="preserve">
+  <data name="lrgrCentrosAlquiler" xml:space="preserve">
     <value>Centros de Alquiler</value>
   </data>
   <data name="lrbtnEmpresas" xml:space="preserve">
@@ -201,82 +201,10 @@
   <data name="lrbtnZonasOficina" xml:space="preserve">
     <value>Zonas Oficina</value>
   </data>
-  <data name="lrgrClientes" xml:space="preserve">
+  <data name="lrgrMaestrosClientes" xml:space="preserve">
     <value>Clientes</value>
   </data>
-  <data name="lrbtnClientes" xml:space="preserve">
-    <value>Clientes</value>
-  </data>
-  <data name="lrbtnCambioCodigoCliente" xml:space="preserve">
-    <value>Cambio Código de Cliente</value>
-  </data>
-  <data name="lrbtnEntradaRapida" xml:space="preserve">
-    <value>Entrada Rápida</value>
-  </data>
-  <data name="lrgrComisionistas" xml:space="preserve">
-    <value>Comisionistas</value>
-  </data>
-  <data name="lrbtnComisionistas" xml:space="preserve">
-    <value>Comisionistas</value>
-  </data>
-  <data name="lrgrProveedores" xml:space="preserve">
-    <value>Proveedores</value>
-  </data>
-  <data name="lrbtnProveedores" xml:space="preserve">
-    <value>Proveedores</value>
-  </data>
-  <data name="lrgrTarifas" xml:space="preserve">
-    <value>Tarifas</value>
-  </data>
-  <data name="lrmnbtnTarifas" xml:space="preserve">
-    <value>Tarifas</value>
-  </data>
-  <data name="lrbtnTarifas" xml:space="preserve">
-    <value>Tarifas</value>
-  </data>
-  <data name="lrbtnCambioCodigoTarifas" xml:space="preserve">
-    <value>Cambio Código de Tarifas</value>
-  </data>
-  <data name="lrbtnCrearTarifaDesdeOtraTarifa" xml:space="preserve">
-    <value>Crear Tarifa a Partir Otra</value>
-  </data>
-  <data name="lrbtnIncrementoPrecios" xml:space="preserve">
-    <value>Incremento Precios</value>
-  </data>
-  <data name="lrbtnTarifaCliente" xml:space="preserve">
-    <value>Tarifa por Cliente</value>
-  </data>
-  <data name="lrbtnTarifasComisionista" xml:space="preserve">
-    <value>Tarifas por Comisionista</value>
-  </data>
-  <data name="lrbtnVerTarifa" xml:space="preserve">
-    <value>Ver Tarifa</value>
-  </data>
-  <data name="lrbtnVincularClienteTarifa" xml:space="preserve">
-    <value>Vincular Cliente a Tarifas</value>
-  </data>
-  <data name="lrgrVehiculos" xml:space="preserve">
-    <value>Vehículos</value>
-  </data>
-  <data name="lrmnbtnVehiculos" xml:space="preserve">
-    <value>Vehículos</value>
-  </data>
-  <data name="lrbtnVehiculos" xml:space="preserve">
-    <value>Vehículos</value>
-  </data>
-  <data name="lrbtnCambioCodigoVehiculo" xml:space="preserve">
-    <value>Cambio Código de Vehículo</value>
-  </data>
-  <data name="lrbtnModificacionMasivaAux" xml:space="preserve">
-    <value>Modificación Masiva</value>
-  </data>
-  <data name="lrbtnRecalculoMantenimiento" xml:space="preserve">
-    <value>Recálculo Mantenimiento</value>
-  </data>
-  <data name="lrgrAuxiliares" xml:space="preserve">
-    <value>Auxiliares</value>
-  </data>
-  <data name="lrmnbtnAuxiliaresClientes" xml:space="preserve">
+  <data name="lrmnbtnMaestrosClientes" xml:space="preserve">
     <value>Clientes</value>
   </data>
   <data name="lrbtnBancosClientes" xml:space="preserve">
@@ -285,17 +213,26 @@
   <data name="lrbtnBloqueFacturacion" xml:space="preserve">
     <value>Bloque de Facturación</value>
   </data>
+  <data name="lrbtnCambioCodigoCliente" xml:space="preserve">
+    <value>Cambio Código de Cliente</value>
+  </data>
   <data name="lrbtnCanales" xml:space="preserve">
     <value>Canales</value>
   </data>
   <data name="lrbtnCargosPersonal" xml:space="preserve">
     <value>Cargos del Personal</value>
   </data>
+  <data name="lrbtnCCAA" xml:space="preserve">
+    <value>Comunidades Autónomas</value>
+  </data>
   <data name="lrbtnClavesPresupuesto" xml:space="preserve">
     <value>Claves de Presupuesto</value>
   </data>
-  <data name="lrbtnCCAA" xml:space="preserve">
-    <value>Comunidades Autónomas</value>
+  <data name="lrbtnClientes" xml:space="preserve">
+    <value>Clientes</value>
+  </data>
+  <data name="lrbtnEntradaRapida" xml:space="preserve">
+    <value>Entrada Rápida</value>
   </data>
   <data name="lrbtnFormasCobroClientes" xml:space="preserve">
     <value>Formas de Cobro a Clientes</value>
@@ -345,7 +282,13 @@
   <data name="lrbtnZonasCliente" xml:space="preserve">
     <value>Zonas Cliente</value>
   </data>
-  <data name="lrmnbtnAuxiliaresComisionistas" xml:space="preserve">
+  <data name="lrgrMaestrosComisionistas" xml:space="preserve">
+    <value>Comisionistas</value>
+  </data>
+  <data name="rmnbtnMaestrosComisionistas" xml:space="preserve">
+    <value>Comisionistas</value>
+  </data>
+  <data name="lrbtnComisionistas" xml:space="preserve">
     <value>Comisionistas</value>
   </data>
   <data name="lrbtnEmpleadosAgencia" xml:space="preserve">
@@ -354,7 +297,10 @@
   <data name="lrbtnTipoComisionista" xml:space="preserve">
     <value>Tipos Comisionista</value>
   </data>
-  <data name="lrmnbtnAuxiliaresContratos" xml:space="preserve">
+  <data name="lrgrMaestrosContratos" xml:space="preserve">
+    <value>Contratos</value>
+  </data>
+  <data name="lrmnbtnMaestrosContratos" xml:space="preserve">
     <value>Contratos</value>
   </data>
   <data name="lrbtnAccesorios" xml:space="preserve">
@@ -378,7 +324,10 @@
   <data name="lrbtnTipoImpresoContrato" xml:space="preserve">
     <value>Tipo Impreso de Contrato</value>
   </data>
-  <data name="lrmnbtnAuxiliaresIncidencias" xml:space="preserve">
+  <data name="lrgrMaestrosIncidencias" xml:space="preserve">
+    <value>Incidencias</value>
+  </data>
+  <data name="lrmnbtnMaestrosIncidencias" xml:space="preserve">
     <value>Incidencias</value>
   </data>
   <data name="lrbtnTiposIncidenciasClientes" xml:space="preserve">
@@ -393,7 +342,10 @@
   <data name="lrbtnTiposIncidenciasReservas" xml:space="preserve">
     <value>Reservas</value>
   </data>
-  <data name="lrmnbtnAuxiliaresProveedores" xml:space="preserve">
+  <data name="lrgrMaestrosProveedores" xml:space="preserve">
+    <value>Proveedores</value>
+  </data>
+  <data name="lrmnbtnMaestrosProveedores" xml:space="preserve">
     <value>Proveedores</value>
   </data>
   <data name="lrbtnDivisas" xml:space="preserve">
@@ -402,10 +354,16 @@
   <data name="lrbtnFormaPagoProveedor" xml:space="preserve">
     <value>Formas de Pago</value>
   </data>
+  <data name="lrbtnProveedores" xml:space="preserve">
+    <value>Proveedores</value>
+  </data>
   <data name="lrbtnTiposProveedores" xml:space="preserve">
     <value>Tipos Proveedor</value>
   </data>
-  <data name="lrmnbtnAuxiliaresReservas" xml:space="preserve">
+  <data name="lrgrMaestrosReservas" xml:space="preserve">
+    <value>Reservas</value>
+  </data>
+  <data name="lrmnbtnMaestrosReservas" xml:space="preserve">
     <value>Reservas</value>
   </data>
   <data name="lrbtnClavesFee" xml:space="preserve">
@@ -420,16 +378,46 @@
   <data name="lrbtnMotivosNoServicio" xml:space="preserve">
     <value>Motivos de No Servicio</value>
   </data>
-  <data name="lrmnbtnAuxiliaresTarifas" xml:space="preserve">
+  <data name="lrgrMaestrosTarifas" xml:space="preserve">
     <value>Tarifas</value>
+  </data>
+  <data name="lrmnbtnMaestrosTarifas" xml:space="preserve">
+    <value>Tarifas</value>
+  </data>
+  <data name="lrbtnCambioCodigoTarifas" xml:space="preserve">
+    <value>Cambio Código de Tarifas</value>
   </data>
   <data name="lrbtnConceptosFacturacion" xml:space="preserve">
     <value>Conceptos Facturación</value>
   </data>
+  <data name="lrbtnCrearTarifaDesdeOtraTarifa" xml:space="preserve">
+    <value>Crear Tarifa a Partir Otra</value>
+  </data>
   <data name="lrbtnGruposTarifa" xml:space="preserve">
     <value>Grupos de Tarifas</value>
   </data>
-  <data name="lrmnbtnAuxiliaresVehiculos" xml:space="preserve">
+  <data name="lrbtnIncrementoPrecios" xml:space="preserve">
+    <value>Incremento Precios</value>
+  </data>
+  <data name="lrbtnTarifas" xml:space="preserve">
+    <value>Tarifas</value>
+  </data>
+  <data name="lrbtnTarifaCliente" xml:space="preserve">
+    <value>Tarifa por Cliente</value>
+  </data>
+  <data name="lrbtnTarifasComisionista" xml:space="preserve">
+    <value>Tarifas por Comisionista</value>
+  </data>
+  <data name="lrbtnVerTarifa" xml:space="preserve">
+    <value>Ver Tarifa</value>
+  </data>
+  <data name="lrbtnVincularClienteTarifa" xml:space="preserve">
+    <value>Vincular Cliente a Tarifas</value>
+  </data>
+  <data name="lrgrMaestrosVehiculos" xml:space="preserve">
+    <value>Vehículos</value>
+  </data>
+  <data name="lrmnbtnMaestrosVehiculos" xml:space="preserve">
     <value>Vehículos</value>
   </data>
   <data name="lrbtnAccesoriosVehiculos" xml:space="preserve">
@@ -437,6 +425,9 @@
   </data>
   <data name="lrbtnActividadesVehiculos" xml:space="preserve">
     <value>Actividades Vehículos</value>
+  </data>
+  <data name="lrbtnCambioCodigoVehiculo" xml:space="preserve">
+    <value>Cambio Código de Vehículo</value>
   </data>
   <data name="lrbtnCodigosInmovilizacion" xml:space="preserve">
     <value>Códigos Inmovilización</value>
@@ -462,16 +453,28 @@
   <data name="lrbtnModelos" xml:space="preserve">
     <value>Modelos</value>
   </data>
+  <data name="lrbtnModificacionMasivaAux" xml:space="preserve">
+    <value>Modificación Masiva</value>
+  </data>
   <data name="lrbtnMotivosRepostaje" xml:space="preserve">
     <value>Motivos Repostaje</value>
   </data>
   <data name="lrbtnPropietarios" xml:space="preserve">
     <value>Propietarios</value>
   </data>
+  <data name="lrbtnRecalculoMantenimiento" xml:space="preserve">
+    <value>Recálculo Mantenimiento</value>
+  </data>
   <data name="lrbtnTiposVehiculos" xml:space="preserve">
     <value>Tipos de Vehículo</value>
   </data>
-  <data name="lrmnbtnAuxiliaresVarios" xml:space="preserve">
+  <data name="lrbtnVehiculos" xml:space="preserve">
+    <value>Vehículos</value>
+  </data>
+  <data name="lrgrMaestrosVarios" xml:space="preserve">
+    <value>Varios</value>
+  </data>
+  <data name="lrmnbtnMaestrosVarios" xml:space="preserve">
     <value>Varios</value>
   </data>
   <data name="lrbtnCategoriasPersonal" xml:space="preserve">
@@ -780,9 +783,6 @@
   <data name="lrbtnCambioUbicacion" xml:space="preserve">
     <value>Cambio de Ubicación</value>
   </data>
-  <data name="lrbtnDescargarMultas" xml:space="preserve">
-    <value>Descargar Multas</value>
-  </data>
   <data name="lrbtnHistoricoSeguros" xml:space="preserve">
     <value>Histórico Seguros</value>
   </data>
@@ -890,6 +890,30 @@
   </data>
   <data name="lrbtnListadosVehiculos" xml:space="preserve">
     <value>Vehículos</value>
+  </data>
+  <data name="lrbtbServicios" xml:space="preserve">
+    <value>Servicios</value>
+  </data>
+  <data name="lrgrServicios" xml:space="preserve">
+    <value>Servicios</value>
+  </data>
+  <data name="lrbtnDescargarMultas" xml:space="preserve">
+    <value>Descargar Multas</value>
+  </data>
+  <data name="lrbtnMantenimientoServicios" xml:space="preserve">
+    <value>Mantenimiento Servicios</value>
+  </data>
+  <data name="lrbtnMultas" xml:space="preserve">
+    <value>Multas</value>
+  </data>
+  <data name="lrbtnNeumaticos" xml:space="preserve">
+    <value>Neumáticos</value>
+  </data>
+  <data name="lrbtnTarjetaCombustible" xml:space="preserve">
+    <value>Tarjeta Combustible</value>
+  </data>
+  <data name="lrbtnVehiculoSustitucion" xml:space="preserve">
+    <value>Vehículo de Sustitución</value>
   </data>
   <data name="lrbtbConfiguracion" xml:space="preserve">
     <value>Configuración</value>
@@ -1128,6 +1152,12 @@
   <data name="msgEdicionRegistroTitulo" xml:space="preserve">
     <value>Edición de registro</value>
   </data>
+  <data name="lrdbCintaOpcionesMarcarTodos" xml:space="preserve">
+    <value>Marcar Todos</value>
+  </data>
+  <data name="lrdbCintaOpcionesDesmarcarTodos" xml:space="preserve">
+    <value>Desmarcar Todos</value>
+  </data>
   <data name="msgErrorTitulo" xml:space="preserve">
     <value>Mensaje de Error</value>
   </data>
@@ -1145,11 +1175,5 @@
   </data>
   <data name="msgError141" xml:space="preserve">
     <value>No se encuentra la Tabla</value>
-  </data>
-  <data name="lrdbCintaOpcionesMarcarTodos" xml:space="preserve">
-    <value>Marcar Todos</value>
-  </data>
-  <data name="lrdbCintaOpcionesDesmarcarTodos" xml:space="preserve">
-    <value>Desmarcar Todos</value>
   </data>
 </root>
