--- a/src/Modules/ProvidersModule/Properties/Resources.es-ES.resx
+++ b/src/Modules/ProvidersModule/Properties/Resources.es-ES.resx
@@ -180,7 +180,7 @@
   <data name="ProviderInfoViewModel_LoadAccountLeft_PlazoDePago" xml:space="preserve">
     <value>Plazo de pago</value>
   </data>
-<data name="ProviderInfoViewModel_FechaDeBaja" xml:space="preserve">
+  <data name="ProviderInfoViewModel_FechaDeBaja" xml:space="preserve">
     <value>Fecha de Baja</value>
   </data>
   <data name="ProviderInfoViewModel_FechaDeAlta" xml:space="preserve">
@@ -194,5 +194,29 @@
   </data>
   <data name="ProvidersControlViewModel_OpenNewItem_NewSupplier" xml:space="preserve">
     <value>NuevoProveedor</value>
+  </data>
+  <data name="UiMiddlePartPageBuilder_BuildDates_FechaDeAlta" xml:space="preserve">
+    <value>Fecha de alta</value>
+  </data>
+  <data name="UiInvoicingBuilder_LoadAccounts_Prefijo" xml:space="preserve">
+    <value>Prefijo</value>
+  </data>
+  <data name="ProviderInfoViewModel_LoadAccountLeft_CuentaCP" xml:space="preserve">
+    <value>Cuenta C/P</value>
+  </data>
+  <data name="UiInvoicingBuilder_LoadLeasingUiObjects_CuentaLP" xml:space="preserve">
+    <value>Cuenta L/P</value>
+  </data>
+  <data name="UiInvoicingBuilder_LoadInvocingData_FormaDePago" xml:space="preserve">
+    <value>Forma de Pago</value>
+  </data>
+  <data name="ProviderConstants_GestiónDeAlbaranes" xml:space="preserve">
+    <value>Gestión de albaranes</value>
+  </data>
+  <data name="UiDirectionPageBuilder_OrderCommunicationWay_Via" xml:space="preserve">
+    <value>Via</value>
+  </data>
+  <data name="UiInvoicingBuilder_LoadIntraco_CtaSoportado" xml:space="preserve">
+    <value>Cta.Supportado</value>
   </data>
 </root>
