--- a/src/Modules/MasterModule/Properties/Resources.de-DE.resx
+++ b/src/Modules/MasterModule/Properties/Resources.de-DE.resx
@@ -118,105 +118,49 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Nombre" xml:space="preserve">
-    <value>Nombre</value>
+    <value>Name</value>
   </data>
   <data name="NIF" xml:space="preserve">
-    <value>NIF</value>
-  </data>
-  <data name="TipoProv" xml:space="preserve">
-    <value>Tipo Prov.</value>
-  </data>
-  <data name="Numero" xml:space="preserve">
-    <value>Número</value>
-  </data>
-  <data name="NombreCommercial" xml:space="preserve">
-    <value>Nombre Commercial</value>
-  </data>
-  <data name="Dirección" xml:space="preserve">
-    <value>Dirección</value>
-  </data>
-  <data name="CP" xml:space="preserve">
-    <value>CP</value>
-  </data>
-  <data name="Pais" xml:space="preserve">
-    <value>País</value>
-  </data>
-  <data name="Provincia" xml:space="preserve">
-    <value>Provincia</value>
-  </data>
-  <data name="Población" xml:space="preserve">
-    <value>Población</value>
-  </data>
-  <data name="Teléfono" xml:space="preserve">
-    <value>Teléfono</value>
-  </data>
-  <data name="Fax" xml:space="preserve">
-    <value>Fax</value>
-  </data>
-  <data name="Móvil" xml:space="preserve">
-    <value>Móvil</value>
-  </data>
-  <data name="Email" xml:space="preserve">
-    <value>Email</value>
+    <value>Steuernummer</value>
   </data>
   <data name="Web" xml:space="preserve">
     <value>Web</value>
   </data>
-  <data name="Contacto" xml:space="preserve">
-    <value>Contacto</value>
-  </data>
-  <data name="Empresa" xml:space="preserve">
-    <value>Empresa</value>
-  </data>
-  <data name="Oficina" xml:space="preserve">
-    <value>Oficina</value>
-  </data>
-  <data name="Dirección2" xml:space="preserve">
-    <value>Segunda Dirección</value>
-  </data>
-  <data name="PlazoDePago" xml:space="preserve">
-    <value>Plazo de pago</value>
-  </data>
-  <data name="FechaDeBaja" xml:space="preserve">
-    <value>Fecha de Baja</value>
-  </data>
-  <data name="FechaDeAlta" xml:space="preserve">
-    <value>Fecha de Alta</value>
-  </data>
-  <data name="Notas" xml:space="preserve">
-    <value>Notas</value>
-  </data>
-  <data name="Observaciones" xml:space="preserve">
-    <value>Observaciones</value>
-  </data>
-  <data name="NewSupplier" xml:space="preserve">
-    <value>NuevoProveedor</value>
-  </data>
-  <data name="Prefijo" xml:space="preserve">
-    <value>Prefijo</value>
-  </data>
-  <data name="CuentaCP" xml:space="preserve">
-    <value>Cuenta C/P</value>
-  </data>
-  <data name="CuentaLP" xml:space="preserve">
-    <value>Cuenta L/P</value>
-  </data>
-  <data name="FormaDePago" xml:space="preserve">
-    <value>Forma de Pago</value>
-  </data>
-  <data name="GestiónDeAlbaranes" xml:space="preserve">
-    <value>Gestión de albaranes</value>
-  </data>
   <data name="OrderCommunicationWay_Via" xml:space="preserve">
     <value>Via</value>
   </data>
-  <data name="CtaSoportado" xml:space="preserve">
-    <value>Cta.Supportado</value>
-  </data>
-  <data name="EsIntracomunitario" xml:space="preserve">
-    <value>Es Intracomunitario</value>
-  </data>
   <data name="Header_Vehiculos" xml:space="preserve">
-    <value>Vehiculos</value>
+    <value>Fahrzeuge</value>
+  </data>
+  <data name="TipoProv" xml:space="preserve">
+    <value>Lieferantentyp</value>
+  </data>
+  <data name="Teléfono" xml:space="preserve">
+    <value>Telefon</value>
+  </data>
+  <data name="Prefijo" xml:space="preserve">
+    <value>Präfix</value>
+  </data>
+  <data name="Pais" xml:space="preserve">
+    <value>Land</value>
+  </data>
+  <data name="Oficina" xml:space="preserve">
+    <value> Büro</value>
+  </data>
+  <data name="Numero" xml:space="preserve">
+    <value>Nummer</value>
+  </data>
+  <data name="Notas" xml:space="preserve">
+    <value>Anmerkungen
+</value>
+  </data>
+  <data name="NombreCommercial" xml:space="preserve">
+    <value>Kommerzial Name</value>
+  </data>
+  <data name="NewSupplier" xml:space="preserve">
+    <value>Neuer Lieferant</value>
+  </data>
+  <data name="Móvil" xml:space="preserve">
+    <value>Handy</value>
   </data>
 </root>
