--- a/KarveLocale/Properties/Resources.es-ES.resx
+++ b/KarveLocale/Properties/Resources.es-ES.resx
@@ -2097,4 +2097,10 @@
   <data name="lfingarantia" xml:space="preserve">
     <value>Fine Garantia</value>
   </data>
+  <data name="lpermiso" xml:space="preserve">
+    <value>Permiso de Conducir</value>
+  </data>
+  <data name="TarjetaDeCredito" xml:space="preserve">
+    <value>Tarjeta de Credito</value>
+  </data>
 </root>
