--- a/KarveLocale/Properties/Resources.it-IT.resx
+++ b/KarveLocale/Properties/Resources.it-IT.resx
@@ -2462,4 +2462,10 @@
   <data name="lfingarantia" xml:space="preserve">
     <value>Fine Garanzia</value>
   </data>
+  <data name="lpermiso" xml:space="preserve">
+    <value>Patente di Guida</value>
+  </data>
+  <data name="TarjetaDeCredito" xml:space="preserve">
+    <value>Carta di Credito</value>
+  </data>
 </root>
