--- a/KarveLocale/Properties/Resources.es-ES.resx
+++ b/KarveLocale/Properties/Resources.es-ES.resx
@@ -1909,7 +1909,7 @@
     <value>Comp.de seguros</value>
   </data>
   <data name="Commisiones" xml:space="preserve">
-    <value>Commissiones</value>
+    <value>Comisiones </value>
   </data>
   <data name="StringConstants_BajaTrafico" xml:space="preserve">
     <value>Baja Trafico</value>
